hphp/test/zend/good/Zend/tests/dynamic_call_004.php.expectf

Notice: Undefined variable: a in %s/dynamic_call_004.php on line 3

Notice: Undefined variable: b in %s/dynamic_call_004.php on line 3

Fatal error: Cls: Expected string or object in %s/dynamic_call_004.php on line 3
